--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -4,6 +4,6 @@ icon: fa-user
 order: 3
 ---
 
-<a href="#" class="image featured"><img src="assets/images/pic08.jpg" alt="" /></a>
+<a href="#" class="image featured"><img src="assets/images/AboutMe.jpg" alt="" /></a>
 
 <p>A passionate researcher with hobbies like hiking, kayaking and biking.</p>
