--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -1,17 +1,16 @@
 ---
 title: Intro
-cover-photo: assets/images/banner.jpg
+cover-photo: assets/images/BannerImage.jpg
 cover-photo-alt: example cover photo
 auto-header: none
 icon: fa-comment
 order: 1
 ---
 <header>
-  <h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-  site template designed by <a href="http://html5up.net/prologue">HTML5 UP</a>.</h2>
-  <p>Adapted for Jekyll by <a href=https://chrisbobbe.github.io/>Chris Bobbe</a>. Get started on <a href="https://github.com/chrisbobbe/jekyll-theme-prologue">GitHub!</a></p>
+  <h2 class="alt">Hi! I'm <strong>Punnag Chatterjee</strong>, a post-doctoral researcher in the MAE department at North Carolina State University.<br /></h2>
+  <!--p>Adapted for Jekyll by <a href=https://chrisbobbe.github.io/>Chris Bobbe</a>. Get started on <a href="https://github.com/chrisbobbe/jekyll-theme-prologue">GitHub!</a></p-->
 </header>
 
-<footer>
+<!--footer>
   <a href="#portfolio" class="button scrolly">Magna Aliquam</a>
-</footer>
+</footer-->
