--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -1,15 +1,30 @@
 ---
-title: Portfolio
+title: Publications
 icon: fa-th
-order: 2
+order: 3
 ---
 
-<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-  egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-  Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-  fusce hendrerit lacus ridiculus.</p>
-
-  <div class="row">
+<p>Below are a list of my published research papers.</p>
+  
+  <div>Aeroelastic-photovoltaic ribbons for integrated wind and solar energy harvesting</div>
+  <div>P. Chatterjee and M. Bryant, “Aeroelastic-photovoltaic ribbons for integrated wind and solar energy harvesting,” Smart Mater. Struct., vol. 27, no. 8, Aug. 2018.</div>
+  <p>Abstract:<br>
+  This letter investigates the energy harvesting capabilities of a novel hybrid wind and solar transduction device. 
+  The proposed device is an inverted-U shaped structure with a pair of piezoelectric benders connected by a flexible, 
+  tensioned photovoltaic ribbon. The tensioned photovoltaic ribbon member undergoes aeroelastic flutter limit cycle 
+  oscillations (LCOs) at low wind speeds, leading to time-varying tension forces applied to the piezoelectric benders, 
+  producing cyclic deflections and output voltage. Experimental characterization of the proof of concept energy harvester 
+  indicates that it is possible to obtain several milliwatts (mW) of power using the centimeter scale device, with an 
+  output power of ~12.1 mW at a combination of 12 m s−1 wind speed and 100 W m−2 of solar irradiance, for indirect solar 
+  applications. It is shown here that an optimal combination of applied tensile preload and preset angle of attack exists 
+  which produces the highest wind power output of the system. An explanation of this behavior is also provided through the 
+  analysis of data collected on the photovoltaic ribbon velocity, piezoelectric voltage signals, and high-speed imagery, 
+  providing further insight to the motion kinematics of the highly nonlinear system response. Interestingly, the solar power 
+  output has been observed to remain invariant with increasing vibration velocity. This suggests that the gain in solar power 
+  efficiency from vibration-induced convective cooling negates any losses from the deflected incidence angle of the photovoltaic 
+  ribbon. These results illustrate that there is a negligible performance penalty in adding wind energy harvesting capability 
+  to the solar cells with this device concept.</p>
+  <!--div class="row">
     <div class="4u 12u$(mobile)">
       <div class="item">
         <a href="#" class="image fit"><img src="{{ 'assets/images/pic02.jpg' | relative_url }}" alt="Ipsum Feugiat" /></a>
@@ -52,4 +67,4 @@ order: 2
         </header>
       </div>
     </div>
-  </div>
+  </div-->
