Adding link to paper

--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -6,7 +6,8 @@ order: 3
 
 <p>Below are a list of my published research papers.</p>
   
-  <div>Aeroelastic-photovoltaic ribbons for integrated wind and solar energy harvesting</div>
+  <div><a href = "https://iopscience.iop.org/article/10.1088/1361-665X/aacbbb/meta">Aeroelastic-photovoltaic ribbons for 
+    integrated wind and solar energy harvesting</a></div>
   <div>P. Chatterjee and M. Bryant, “Aeroelastic-photovoltaic ribbons for integrated wind and solar energy harvesting,” Smart Mater. Struct., vol. 27, no. 8, Aug. 2018.</div>
   <p>Abstract:<br>
   This letter investigates the energy harvesting capabilities of a novel hybrid wind and solar transduction device. 
