--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -1,15 +1,15 @@
 ---
 title: Publications
 icon: fa-th
-order: 3
+order: 2
 ---
 
-<p>Below are a list of my published research papers.</p>
+<div align="left">Below are a list of my published research papers.</div>
   
-  <div><a href = "https://iopscience.iop.org/article/10.1088/1361-665X/aacbbb/meta">Aeroelastic-photovoltaic ribbons for 
+<div align="left"><a href = "https://iopscience.iop.org/article/10.1088/1361-665X/aacbbb/meta">Aeroelastic-photovoltaic ribbons for 
     integrated wind and solar energy harvesting</a></div>
-  <div>P. Chatterjee and M. Bryant, “Aeroelastic-photovoltaic ribbons for integrated wind and solar energy harvesting,” Smart Mater. Struct., vol. 27, no. 8, Aug. 2018.</div>
-  <p>Abstract:<br>
+<div align="left">P. Chatterjee and M. Bryant, “Aeroelastic-photovoltaic ribbons for integrated wind and solar energy harvesting,” Smart Mater. Struct., vol. 27, no. 8, Aug. 2018.</div>
+<div align="left">Abstract:<br>
   This letter investigates the energy harvesting capabilities of a novel hybrid wind and solar transduction device. 
   The proposed device is an inverted-U shaped structure with a pair of piezoelectric benders connected by a flexible, 
   tensioned photovoltaic ribbon. The tensioned photovoltaic ribbon member undergoes aeroelastic flutter limit cycle 
@@ -24,7 +24,7 @@ order: 3
   output has been observed to remain invariant with increasing vibration velocity. This suggests that the gain in solar power 
   efficiency from vibration-induced convective cooling negates any losses from the deflected incidence angle of the photovoltaic 
   ribbon. These results illustrate that there is a negligible performance penalty in adding wind energy harvesting capability 
-  to the solar cells with this device concept.</p>
+  to the solar cells with this device concept.</div>
   <!--div class="row">
     <div class="4u 12u$(mobile)">
       <div class="item">
