Adding all papers

--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -4,11 +4,10 @@ icon: fa-th
 order: 2
 ---
 
-<div align="left">Below are a list of my published research papers.</div>
+<div align="left">Journal Publications:</div>
   
 <div align="left"><a href = "https://iopscience.iop.org/article/10.1088/1361-665X/aacbbb/meta">Aeroelastic-photovoltaic ribbons for 
     integrated wind and solar energy harvesting</a></div>
-<div align="left">P. Chatterjee and M. Bryant, “Aeroelastic-photovoltaic ribbons for integrated wind and solar energy harvesting,” Smart Mater. Struct., vol. 27, no. 8, Aug. 2018.</div>
 <div align="left">Abstract:<br>
   This letter investigates the energy harvesting capabilities of a novel hybrid wind and solar transduction device. 
   The proposed device is an inverted-U shaped structure with a pair of piezoelectric benders connected by a flexible, 
@@ -25,47 +24,71 @@ order: 2
   efficiency from vibration-induced convective cooling negates any losses from the deflected incidence angle of the photovoltaic 
   ribbon. These results illustrate that there is a negligible performance penalty in adding wind energy harvesting capability 
   to the solar cells with this device concept.</div>
-  <!--div class="row">
-    <div class="4u 12u$(mobile)">
-      <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic02.jpg' | relative_url }}" alt="Ipsum Feugiat" /></a>
-        <header>
-          <h3>Ipsum Feugiat</h3>
-        </header>
-      </div>
-      <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic03.jpg' | relative_url }}" alt="Rhoncus Semper" /></a>
-        <header>
-          <h3>Rhoncus Semper</h3>
-        </header>
-      </div>
-    </div>
-    <div class="4u 12u$(mobile)">
-      <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic04.jpg' | relative_url }}" alt="Magna Nullam" /></a>
-        <header>
-          <h3>Magna Nullam</h3>
-        </header>
-      </div>
-      <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic05.jpg' | relative_url }}" alt="Natoque Vitae" /></a>
-        <header>
-          <h3>Natoque Vitae</h3>
-        </header>
-      </div>
-    </div>
-    <div class="4u 12u$(mobile)">
-      <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic06.jpg' | relative_url }}" alt="Dolor Penatibus" /></a>
-        <header>
-          <h3>Dolor Penatibus</h3>
-        </header>
-      </div>
-      <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic07.jpg' | relative_url }}" alt="Orci Convallis" /></a>
-        <header>
-          <h3>Orci Convallis</h3>
-        </header>
-      </div>
-    </div>
-  </div-->
+
+<div align="left"><a href = "https://iopscience.iop.org/article/10.1088/0964-1726/24/9/094007/meta">Structural modelling of a 
+  compliant flexure flow energy harvester</a></div>
+<div align="left">Abstract:<br>
+  This paper presents the concept of a flow-induced vibration energy harvester based on a one-piece compliant flexure structure. 
+  This energy harvester utilizes the aeroelastic flutter phenomenon to convert flow energy to structural vibrational energy and 
+  to electrical power output through piezoelectric transducers. This flexure creates a discontinuity in the structural stiffness 
+  and geometry that can be used to tailor the mode shapes and natural frequencies of the device to the desired operating flow regime 
+  while eliminating the need for discrete hinges that are subject to fouling and friction. An approximate representation of the 
+  flexure rigidity is developed from the flexure link geometry, and a model of the complete discontinuous structure and integrated 
+  flexure is formulated based on the transfer matrix method. The natural frequencies and mode shapes predicted by the model are 
+  validated using finite element simulations and are shown to be in close agreement. A proof-of-concept energy harvester incorporating 
+  the proposed flexure design has been fabricated and investigated in wind tunnel testing. The aeroelastic modal convergence, critical 
+  flutter wind speed, power output and limit cycle behavior of this device is experimentally determined and discussed.</div>
+
+<div align="left"><a href = "https://arc.aiaa.org/doi/abs/10.2514/1.J057740?journalCode=aiaaj">Dual-Actuator Disc Theory for 
+  Turbines in Yaw</a></div>
+<div align="left">Abstract:<br>
+ This paper extends the classical single-turbine actuator disc theory by Betz [1], and the dual-turbine actuator disc theory by 
+ Newman [2], which describe the maximum power extraction capabilities of a single and dual horizontal axis turbine, respectively, 
+ to a system of co-axial actuator discs operating in yaw conditions (ie, for the case where the free stream velocity is not normal 
+ to the turbine plane). The study takes advantage of dividing the flow into independent streamtubes, and analyzing them separately 
+ as they pass through momentum discs while simultaneously affecting each other. Similar work has been done recently by Rosenberg 
+ et al.[3] with a smaller diameter rotor upstream of a main rotor with cutout and the flux-line theory for cycloturbines by Adams and 
+ Chen [4].</div>
+
+<div align="left">Conference Publications:</div>
+  
+<div align="left"><a href = "https://www.spiedigitallibrary.org/conference-proceedings-of-spie/10164/1016402/Experimental-investigation-of-flow-induced-limit-cycle-oscillations-in-a/10.1117/12.2260184.short?SSO=1">Experimental 
+  investigation of flow induced limit cycle oscillations in a tensioned ribbon</a></div>
+<div align="left">Abstract:<br>
+  Researchers have performed theoretical investigations of flow induced limit cycle oscillations (LCOs) of tensioned ribbons. 
+  Furthermore, attempts have been made to tap into the energy harvesting capability of such ribbons, owing to its structural simplicity, 
+  low weight and ease of fabrication. However, in order to tune the ribbon to perform optimally at a given location, a robust, 
+  reliable model of the ribbon is essential to predict the limit cycle behavior. The model needs validation across a broad spectrum 
+  of its operating envelope based on experimentally obtained results. This paper seeks to provide experimental data for a sample 
+  tensioned ribbon in cross flow to serve as basis for validation of an aeroelastic model. This paper experimentally characterizes 
+  a PTFE (polytetrafluoroethylene) ribbon of aspect ratio 18 across a range of applied axial preload tension and wind speeds.</div>
+
+<div align="left"><a href = "https://www.spiedigitallibrary.org/conference-proceedings-of-spie/9799/979914/Aeroelastic-modelling-of-a-Piezo-solar-tensioned-energy-harvesting-ribbon/10.1117/12.2222109.short">Aeroelastic 
+  modelling of a Piezo-solar tensioned energy harvesting ribbon</a></div>
+<div align="left">Abstract:<br>
+  A multifunctional compliant structure is proposed that can harvest electrical power from both incident sunlight and ambient mechanical 
+  energy including wind flow or vibration. The proposed energy harvesting device consists of a slender, ribbon-like, flexible thin film 
+  solar cell that is laminated with piezoelectric patches at either ends and mounted in the cross flow of wind in a clamped-clamped end 
+  condition with an adjustable axial preload. Taking this motivation forward a system model of the energy harvester is developed which 
+  captures the structural response of the solar ribbon and couples it with Theodorsen unsteady aerodynamics to predict the flutter 
+  boundary conditions as a function of applied axial preload tension. The model also accounts for geometric and material discontinuities, 
+  by effective use of Transfer Matrix Method (TMM) modeling technique both in bending and torsional degrees of freedom. This paper also 
+  derives TMM technique for torsional vibrations with an applied axial load from first principles, verifies the method and presents its 
+  applicability for the proposed energy harvester. The paper also points out that the flutter instability arises out of different 
+  structural modes at different values applied axial tension, with the help of a sample modal convergence plot. The analysis also 
+  presents the possibility to tune the solar ribbon to operate at an optimal reduced frequency by adjusting the applied axial preload.</div>
+
+<div align="left"><a href = "https://www.spiedigitallibrary.org/conference-proceedings-of-spie/9431/94310D/Transfer-matrix-modeling-of-a-tensioned-piezo-solar-hybrid-energy/10.1117/12.2086138.short">Transfer 
+  matrix modeling of a tensioned piezo-solar hybrid energy harvesting ribbon</a></div>
+<div align="left">Abstract:<br>
+ This paper proposes a multifunctional compliant structure that can harvest electrical power from both incident sunlight and ambient 
+  mechanical energy including wind flow or vibration. The energy harvesting device consists of a slender, ribbon-like, flexible thin 
+  film solar cell that is laminated with piezoelectric patches. The harvester is mounted in longitudinal tension and subjected to a 
+  transverse wind flow to excite flow-induced aeroelastic vibrations. This paper formulates an analytic model of the bending dynamics 
+  of the device. We present a Transfer Matrix formulation that also accounts for the changes in natural frequencies and mode shapes of 
+  the system when subjected to axial loads in a beam. It also observed that mode shape obtained using TMM formulation shows numerical 
+  stability even for very high tensile loads providing results consistent with the geometric boundary conditions applied at the ends 
+  of a beam. This article also discusses about structurally modeling a piezo - solar energy harvester using TMM methodology, where a 
+  thin clampedclamped solar film is bonded with piezo patches having a much higher bending stiffness. Additionally, the effect of axial 
+  tension on the mode shape of the thin host structure of the piezo-solar ribbon is presented and it is shown how this tension can be 
+  used advantageously to affect the strain distribution of the entire structure and introduce higher strains at the piezo patches.</div>
