--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -4,11 +4,11 @@ icon: fa-th
 order: 2
 ---
 
-<div align="left">Journal Publications:</div>
+<div align="left"><h2>Journal Publications:</h2></div>
 <br>
   
-<div align="left"><a href = "https://iopscience.iop.org/article/10.1088/1361-665X/aacbbb/meta">Aeroelastic-photovoltaic ribbons for 
-    integrated wind and solar energy harvesting</a></div>
+<div align="left"><h3><a href = "https://iopscience.iop.org/article/10.1088/1361-665X/aacbbb/meta">Aeroelastic-photovoltaic ribbons for 
+  integrated wind and solar energy harvesting</a></h3></div>
 <div align="left">Abstract:<br>
   This letter investigates the energy harvesting capabilities of a novel hybrid wind and solar transduction device. 
   The proposed device is an inverted-U shaped structure with a pair of piezoelectric benders connected by a flexible, 
