--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -4,12 +4,12 @@ icon: fa-th
 order: 2
 ---
 
-<div align="left"><h2>Journal Publications:</h2></div>
+<div align="left"><h3>Journal Publications:</h3></div>
 <br>
   
-<div align="left"><h3><a href = "https://iopscience.iop.org/article/10.1088/1361-665X/aacbbb/meta">Aeroelastic-photovoltaic ribbons for 
-  integrated wind and solar energy harvesting</a></h3></div>
-<div align="left">Abstract:<br>
+<div align="left"><h4><a href = "https://iopscience.iop.org/article/10.1088/1361-665X/aacbbb/meta">Aeroelastic-photovoltaic ribbons for 
+  integrated wind and solar energy harvesting</a></h4></div>
+<div align="left"><b>Abstract:</b><br>
   This letter investigates the energy harvesting capabilities of a novel hybrid wind and solar transduction device. 
   The proposed device is an inverted-U shaped structure with a pair of piezoelectric benders connected by a flexible, 
   tensioned photovoltaic ribbon. The tensioned photovoltaic ribbon member undergoes aeroelastic flutter limit cycle 
@@ -26,9 +26,9 @@ order: 2
   ribbon. These results illustrate that there is a negligible performance penalty in adding wind energy harvesting capability 
   to the solar cells with this device concept.</div>
 <br>
-<div align="left"><a href = "https://iopscience.iop.org/article/10.1088/0964-1726/24/9/094007/meta">Structural modelling of a 
-  compliant flexure flow energy harvester</a></div>
-<div align="left">Abstract:<br>
+<div align="left"><h4><a href = "https://iopscience.iop.org/article/10.1088/0964-1726/24/9/094007/meta">Structural modelling of a 
+  compliant flexure flow energy harvester</a></h4></div>
+<div align="left"><b>Abstract:</b><br>
   This paper presents the concept of a flow-induced vibration energy harvester based on a one-piece compliant flexure structure. 
   This energy harvester utilizes the aeroelastic flutter phenomenon to convert flow energy to structural vibrational energy and 
   to electrical power output through piezoelectric transducers. This flexure creates a discontinuity in the structural stiffness 
@@ -40,9 +40,9 @@ order: 2
   the proposed flexure design has been fabricated and investigated in wind tunnel testing. The aeroelastic modal convergence, critical 
   flutter wind speed, power output and limit cycle behavior of this device is experimentally determined and discussed.</div>
 <br>
-<div align="left"><a href = "https://arc.aiaa.org/doi/abs/10.2514/1.J057740?journalCode=aiaaj">Dual-Actuator Disc Theory for 
-  Turbines in Yaw</a></div>
-<div align="left">Abstract:<br>
+<div align="left"><h4><a href = "https://arc.aiaa.org/doi/abs/10.2514/1.J057740?journalCode=aiaaj">Dual-Actuator Disc Theory for 
+  Turbines in Yaw</a></h4></div>
+<div align="left"><b>Abstract:</b><br>
  This paper extends the classical single-turbine actuator disc theory by Betz [1], and the dual-turbine actuator disc theory by 
  Newman [2], which describe the maximum power extraction capabilities of a single and dual horizontal axis turbine, respectively, 
  to a system of co-axial actuator discs operating in yaw conditions (ie, for the case where the free stream velocity is not normal 
@@ -52,11 +52,11 @@ order: 2
  Chen [4].</div>
 <br>
 <br>
-<div align="left">Conference Publications:</div>
+<div align="left"><h3>Conference Publications:</h3></div>
 <br>
-<div align="left"><a href = "https://www.spiedigitallibrary.org/conference-proceedings-of-spie/10164/1016402/Experimental-investigation-of-flow-induced-limit-cycle-oscillations-in-a/10.1117/12.2260184.short?SSO=1">Experimental 
-  investigation of flow induced limit cycle oscillations in a tensioned ribbon</a></div>
-<div align="left">Abstract:<br>
+<div align="left"><h4><a href = "https://www.spiedigitallibrary.org/conference-proceedings-of-spie/10164/1016402/Experimental-investigation-of-flow-induced-limit-cycle-oscillations-in-a/10.1117/12.2260184.short?SSO=1">Experimental 
+  investigation of flow induced limit cycle oscillations in a tensioned ribbon</a></h4></div>
+<div align="left"><b>Abstract:</b><br>
   Researchers have performed theoretical investigations of flow induced limit cycle oscillations (LCOs) of tensioned ribbons. 
   Furthermore, attempts have been made to tap into the energy harvesting capability of such ribbons, owing to its structural simplicity, 
   low weight and ease of fabrication. However, in order to tune the ribbon to perform optimally at a given location, a robust, 
@@ -65,9 +65,9 @@ order: 2
   tensioned ribbon in cross flow to serve as basis for validation of an aeroelastic model. This paper experimentally characterizes 
   a PTFE (polytetrafluoroethylene) ribbon of aspect ratio 18 across a range of applied axial preload tension and wind speeds.</div>
 <br>
-<div align="left"><a href = "https://www.spiedigitallibrary.org/conference-proceedings-of-spie/9799/979914/Aeroelastic-modelling-of-a-Piezo-solar-tensioned-energy-harvesting-ribbon/10.1117/12.2222109.short">Aeroelastic 
-  modelling of a Piezo-solar tensioned energy harvesting ribbon</a></div>
-<div align="left">Abstract:<br>
+<div align="left"><h4><a href = "https://www.spiedigitallibrary.org/conference-proceedings-of-spie/9799/979914/Aeroelastic-modelling-of-a-Piezo-solar-tensioned-energy-harvesting-ribbon/10.1117/12.2222109.short">Aeroelastic 
+  modelling of a Piezo-solar tensioned energy harvesting ribbon</a></h4></div>
+<div align="left"><b>Abstract:</b><br>
   A multifunctional compliant structure is proposed that can harvest electrical power from both incident sunlight and ambient mechanical 
   energy including wind flow or vibration. The proposed energy harvesting device consists of a slender, ribbon-like, flexible thin film 
   solar cell that is laminated with piezoelectric patches at either ends and mounted in the cross flow of wind in a clamped-clamped end 
@@ -80,9 +80,9 @@ order: 2
   structural modes at different values applied axial tension, with the help of a sample modal convergence plot. The analysis also 
   presents the possibility to tune the solar ribbon to operate at an optimal reduced frequency by adjusting the applied axial preload.</div>
 <br>
-<div align="left"><a href = "https://www.spiedigitallibrary.org/conference-proceedings-of-spie/9431/94310D/Transfer-matrix-modeling-of-a-tensioned-piezo-solar-hybrid-energy/10.1117/12.2086138.short">Transfer 
-  matrix modeling of a tensioned piezo-solar hybrid energy harvesting ribbon</a></div>
-<div align="left">Abstract:<br>
+<div align="left"><h4><a href = "https://www.spiedigitallibrary.org/conference-proceedings-of-spie/9431/94310D/Transfer-matrix-modeling-of-a-tensioned-piezo-solar-hybrid-energy/10.1117/12.2086138.short">Transfer 
+  matrix modeling of a tensioned piezo-solar hybrid energy harvesting ribbon</a></h4></div>
+<div align="left"><b>Abstract:</b><br>
  This paper proposes a multifunctional compliant structure that can harvest electrical power from both incident sunlight and ambient 
   mechanical energy including wind flow or vibration. The energy harvesting device consists of a slender, ribbon-like, flexible thin 
   film solar cell that is laminated with piezoelectric patches. The harvester is mounted in longitudinal tension and subjected to a 
