--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -9,7 +9,7 @@ order: 2
   
 <div align="left"><h4><a href = "https://iopscience.iop.org/article/10.1088/1361-665X/aacbbb/meta">Aeroelastic-photovoltaic ribbons for 
   integrated wind and solar energy harvesting</a></h4></div>
-<div align="left"><b>Abstract:</b><br>
+<div align="left"><strong>Abstract:</strong><br>
   This letter investigates the energy harvesting capabilities of a novel hybrid wind and solar transduction device. 
   The proposed device is an inverted-U shaped structure with a pair of piezoelectric benders connected by a flexible, 
   tensioned photovoltaic ribbon. The tensioned photovoltaic ribbon member undergoes aeroelastic flutter limit cycle 
