--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -1,29 +1,33 @@
 ---
 title: Projects
-icon: fa-cogs
+icon: fa-th
 order: 4
 ---
 
 <div align="left"><h2>Journal Publications:</h2></div>
 <br>
   
-<div align="left"><h3><a href = "project 1 link">Project 1 title</a></h3></div>
+<div align="left"><h3><a href = "project 1 link">Modeling a flexure hinge</a></h3></div>
 <div align="left">
   Project 1 description</div>
 <br>
-<div align="left"><h3><a href = "project 2 link">Project 2 title</a></h3></div>
+<div align="left"><h3><a href = "project 2 link">Building a wind-solar hybrid energy harvester</a></h3></div>
 <div align="left">
   Project 2 description</div>
 <br>
-<div align="left"><h3><a href = "project 3 link">Project 3 title</a></h3></div>
+<div align="left"><h3><a href = "project 3 link">Measurement and sensing</a></h3></div>
 <div align="left">
   Project 3 description</div>
 <br>
-<div align="left"><h3><a href = "project 4 link">Project 4 title</a></h3></div>
+<div align="left"><h3><a href = "project 4 link">DIC techniques</a></h3></div>
 <div align="left">
   Project 4 description</div>
 <br>
-<div align="left"><h3><a href = "project 5 link">Project 5 title</a></h3></div>
+<div align="left"><h3><a href = "project 5 link">Underwater dual rotor energy harvester concept</a></h3></div>
 <div align="left">
   Project 5 description</div>
+<br>
+<div align="left"><h3><a href = "project 6 link">NASA RASC-AL 2017</a></h3></div>
+<div align="left">
+  Project 6 description</div>
 <br>
