Adding video to project

--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -12,6 +12,9 @@ order: 4
   Project 1 description</div>
 <br>
 <div align="left"><h3><a href = "project 2 link">Building a wind-solar hybrid energy harvester</a></h3></div>
+
+<video src="assets/images/hybrid_wind-solar_sample_exp.mp4" width="320" height="200" controls preload></video>
+
 <div align="left">
   Project 2 description</div>
 <br>
