--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -13,10 +13,13 @@ order: 4
 <br>
 <div align="left"><h3><a href = "project 2 link">Building a wind-solar hybrid energy harvester</a></h3></div>
 
-<video src="assets/images/hybrid_wind-solar_sample_exp.mp4" width="320" height="200" controls preload></video>
-
+<video src="assets/images/hybrid_wind-solar_sample_exp.mp4" width="320" height="200" controls preload
+       style="float: right"></video>
 <div align="left">
-  Project 2 description</div>
+  Project 2 description abcdefgh ijklmnop qrstuvwx yz abcdefgh ijklmnop qrstuvwx yz abcdefgh ijklmnop qrstuvwx yz
+abcdefgh ijklmnop qrstuvwx yz abcdefgh ijklmnop qrstuvwx yz abcdefgh ijklmnop qrstuvwx yz abcdefgh ijklmnop qrstuvwx yz 
+abcdefgh ijklmnop qrstuvwx yz abcdefgh ijklmnop qrstuvwx yz abcdefgh ijklmnop qrstuvwx yz abcdefgh ijklmnop qrstuvwx yz
+abcdefgh ijklmnop qrstuvwx yz abcdefgh ijklmnop qrstuvwx yz abcdefgh ijklmnop qrstuvwx yz abcdefgh ijklmnop qrstuvwx yz</div>
 <br>
 <div align="left"><h3><a href = "project 3 link">Measurement and sensing</a></h3></div>
 <div align="left">
