--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -2,7 +2,7 @@
 title: Projects
 icon: fa-th
 order: 4
-{% include mathjax.html %}
+mathjax: true
 ---
 
 <div align="left"><h2>Journal Publications:</h2></div>
