--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -25,7 +25,7 @@ the out-of-plane bending rigidity of the structure, a series of patterned cuts a
 flexure segment and dividing the structure into a ‘beam segment’ upstream and a ‘flap segment’ downstream. Compared to previous modal 
 convergence flutter energy harvesters, which used a discrete pin or ball-bearing hinge assembly between a beam.
 <br>
-<img src="assets/images/Project1_image1.png" alt="Image1">
+<img src="assets/images/Project1_image1.png" alt="Image1" style="width:500px;">
 <br>
   In order to derive the effective bending rigidity, the patterned flexure segment of length $$l_h$$ is discretized into n_h rigid links 
 each having an elemental length of l_r. Each of these elemental links is connected to the preceding link with a rotational spring of 
