--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -27,7 +27,7 @@ convergence flutter energy harvesters, which used a discrete pin or ball-bearing
 <br>
 <img src="assets/images/Project1_image1.png" alt="Image1" style="width:500px;">
 <br>
-  In order to derive the effective bending rigidity, the patterned flexure segment of length $l_h$ is discretized into n_h rigid links 
+  In order to derive the effective bending rigidity, the patterned flexure segment of length $$l_h$$ is discretized into n_h rigid links 
 each having an elemental length of l_r. Each of these elemental links is connected to the preceding link with a rotational spring of 
 stiffness k_θ(where, k_θ=2GJ⁄l_e ). Figure above shows this arrangement of links and rotational springs cantilevered from a wall and 
 bending due to a load P applied to the tip of rigid element n_h. Under these conditions, the tip deflection of the discretized structure 
