--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -25,36 +25,9 @@ the out-of-plane bending rigidity of the structure, a series of patterned cuts a
 flexure segment and dividing the structure into a ‘beam segment’ upstream and a ‘flap segment’ downstream. Compared to previous modal 
 convergence flutter energy harvesters, which used a discrete pin or ball-bearing hinge assembly between a beam.
 <br>
-<img src="assets/images/Project1_image1.png" alt="Image1" style="width:500px;">
-<br>
-  In order to derive the effective bending rigidity, the patterned flexure segment of length `$$l_h$$` is discretized into n_h rigid links 
-each having an elemental length of l_r. Each of these elemental links is connected to the preceding link with a rotational spring of 
-stiffness k_θ(where, k_θ=2GJ⁄l_e ). Figure above shows this arrangement of links and rotational springs cantilevered from a wall and 
-bending due to a load P applied to the tip of rigid element n_h. Under these conditions, the tip deflection of the discretized structure 
-undergoing bending is given by
-<br>  
-  Image of equation here
-<br>  
-  Balancing the moment acting across the tip and root of the i^th rigid element gives us the torsional rotation of the i^th spring as
-<br>  
-  Image of equation here
-<br>  
-  Assuming small angles and neglecting the effect of geometric foreshortening under large deflections, the effective linear tip 
-stiffness of the discretized structure is given by K_l This can be further equated to the linear tip stiffness of an equivalent beam 
-of length l_h and with the same cantilevered boundary conditions
-<br>  
-  Image of equation here
-<br>  
-  Thus, the effective bending rigidity of the flexure segment, ¯EI_e can now be written as
-<br>  
-  Image of equation here
-<br>  
-  This equation is useful as it relates the geometric properties of the flexure hinge to that of the bending rigidity of this segment, 
-facilitating the tuning of the flexure segment to affect the desired natural frequencies of the entire structure.
-<br>  
-  Note: Parts of this except is taken from the following publication:
-Punnag Chatterjee and Matthew Bryant 2015 Smart Mater. Struct. 24 094007 (https://doi.org/10.1088/0964-1726/24/9/094007)
+<img src="assets/images/Project1_image1.png" alt="Image1" class="center" style="width:600px;">
   
+  <a href = "Project1.pdf"> Read more </a>
 </div>
 <br>
 <div align="left"><h3><a href = "project 2 link">Building a wind-solar hybrid energy harvester</a></h3></div>
