--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -27,7 +27,7 @@ convergence flutter energy harvesters, which used a discrete pin or ball-bearing
 <br>
 <img src="assets/images/Project1_image1.png" alt="Image1" class="center" style="width:600px;">
   
-  <a href = "Project1.pdf"> Read more </a>
+  <a href = "assets/pages/Project1.pdf"> Read more </a>
 </div>
 <br>
 <div align="left"><h3><a href = "project 2 link">Building a wind-solar hybrid energy harvester</a></h3></div>
