--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -8,8 +8,11 @@ order: 4
 <div align="left"><h2>Journal Publications:</h2></div>
 <br>
   
-<div align="left"><h3><a href = "project 1 link">Modeling fabricating and analyzing a flexure hinge</a></h3></div>
+<div align="left"><h3><a href = "https://doi.org/10.1088/0964-1726/24/9/094007">Modeling fabricating and analyzing a flexure hinge</a></h3></div>
 <div align="left">
+  
+<img src="assets/images/Project1_image1.png" alt="Image1" class="center" style="width:600px;">  
+  
  A flexure hinge serves as a connection or a joint between two structural elements. The flexure hinge could provide an alternative to a
 rotary bearing, especially in applications where full rotary motions (i.e. complete 360-degree rotations) are not required. Rolling or 
 sliding surfaces are prone to fouling and require periodic maintenance (lubrication). Using a flexure hinge removes the maintenance 
@@ -25,9 +28,7 @@ the out-of-plane bending rigidity of the structure, a series of patterned cuts a
 flexure segment and dividing the structure into a ‘beam segment’ upstream and a ‘flap segment’ downstream. Compared to previous modal 
 convergence flutter energy harvesters, which used a discrete pin or ball-bearing hinge assembly between a beam.
 <br>
-<img src="assets/images/Project1_image1.png" alt="Image1" class="center" style="width:600px;">
-  
-  <a href = "assets/pages/Project1.pdf"> Read more </a>
+<a href = "assets/pages/Project1.pdf"> Read more </a>
 </div>
 <br>
 <div align="left"><h3><a href = "project 2 link">Building a wind-solar hybrid energy harvester</a></h3></div>
