--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -10,9 +10,7 @@ order: 4
   
 <div align="left"><h3><a href = "https://doi.org/10.1088/0964-1726/24/9/094007">Modeling fabricating and analyzing a flexure hinge</a></h3></div>
 <div align="left">
-  
-<img src="assets/images/Project1_image1.png" alt="Image1" class="center" style="width:600px;">  
-  
+
  A flexure hinge serves as a connection or a joint between two structural elements. The flexure hinge could provide an alternative to a
 rotary bearing, especially in applications where full rotary motions (i.e. complete 360-degree rotations) are not required. Rolling or 
 sliding surfaces are prone to fouling and require periodic maintenance (lubrication). Using a flexure hinge removes the maintenance 
@@ -23,6 +21,8 @@ abrupt change in the bending rigidity of the structure that will in turn be refl
 complete structure. At the same time, this segment could be designed to maintain enough stiffness against deformation in other directions 
 such as in-plane bending and out-of-plane torsion to prevent undesired vibrations. 
 <br>
+ <img src="assets/images/Project1_image1.png" alt="Image1" style="width:600px;">   
+<br>  
   One such usage of the flexure hinge is demonstrated below, in an aeroelastic energy harvesting device. To create an abrupt change in 
 the out-of-plane bending rigidity of the structure, a series of patterned cuts are integrated into the substrate, creating a compliant 
 flexure segment and dividing the structure into a ‘beam segment’ upstream and a ‘flap segment’ downstream. Compared to previous modal 
