--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -40,7 +40,7 @@ such as in-plane bending and out-of-plane torsion to prevent undesired vibration
   One such usage of the flexure hinge is demonstrated below, in an aeroelastic energy harvesting device. To create an abrupt change in 
 the out-of-plane bending rigidity of the structure, a series of patterned cuts are integrated into the substrate, creating a compliant 
 flexure segment and dividing the structure into a ‘beam segment’ upstream and a ‘flap segment’ downstream. Compared to previous modal 
-convergence flutter energy harvesters, which used a discrete pin or ball-bearing hinge assembly between a beam.
+convergence flutter energy harvesters, which used a discrete pin or ball-bearing hinge assembly between a beam. $l_h$, \( l_h \)
 <br>
 <a href = "assets/pages/Project1.pdf"> Read more </a>
 </div>
