--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -34,15 +34,20 @@ requirement and reduces the number of assembled parts.
 abrupt change in the bending rigidity of the structure that will in turn be reflected in the mode shapes and natural frequencies of the 
 complete structure. At the same time, this segment could be designed to maintain enough stiffness against deformation in other directions 
 such as in-plane bending and out-of-plane torsion to prevent undesired vibrations. 
-<br>
- <img src="assets/images/Project1_image1.png" alt="Image1" style="width:600px;">   
 <br>  
   One such usage of the flexure hinge is demonstrated below, in an aeroelastic energy harvesting device. To create an abrupt change in 
 the out-of-plane bending rigidity of the structure, a series of patterned cuts are integrated into the substrate, creating a compliant 
 flexure segment and dividing the structure into a ‘beam segment’ upstream and a ‘flap segment’ downstream. Compared to previous modal 
-convergence flutter energy harvesters, which used a discrete pin or ball-bearing hinge assembly between a beam. $l_h$, \( l_h \)
+convergence flutter energy harvesters, which used a discrete pin or ball-bearing hinge assembly between a beam.
 <br>
-<a href = "assets/pages/Project1.pdf"> Read more </a>
+<img src="assets/images/Project1_image1.png" alt="Image1" style="width:600px;">   
+<br>  
+  In order to derive the effective bending rigidity, the patterned flexure segment of length \(l_h\) is discretized into \(n_h\) rigid 
+links each having an elemental length of \(l_r\). Each of these elemental links is connected to the preceding link with a rotational 
+spring of stiffness \(k_θ\) (where, \(k_θ = 2GJ⁄l_e\) ). Figure above shows this arrangement of links and rotational springs 
+cantilevered from a wall and bending due to a load \(P\) applied to the tip of rigid element \(n_h\). Under these conditions, the tip 
+deflection of the discretized structure undergoing bending is given by
+  
 </div>
   
   <p>
