--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -47,7 +47,9 @@ links each having an elemental length of \(l_r\). Each of these elemental links 
 spring of stiffness \(k_θ\) (where, \(k_θ = 2GJ⁄l_e\) ). Figure above shows this arrangement of links and rotational springs 
 cantilevered from a wall and bending due to a load \(P\) applied to the tip of rigid element \(n_h\). Under these conditions, the tip 
 deflection of the discretized structure undergoing bending is given by
-  
+<br>
+  \( δ_{n_h} = \sum_{j=1}^(n_h) l_r \sin⁡(\sum_{p=1}^j θ_p) \)
+<br>  
 </div>
   
   <p>
