--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -48,7 +48,7 @@ spring of stiffness \(k_θ\) (where, \(k_θ = 2GJ⁄l_e\) ). Figure above shows 
 cantilevered from a wall and bending due to a load \(P\) applied to the tip of rigid element \(n_h\). Under these conditions, the tip 
 deflection of the discretized structure undergoing bending is given by
 <br>
-  \( δ_{n_h} = \sum_{j=1}^{n_h} l_r \sin⁡(\sum_{p=1}^{j} θ_p) \)
+  \[ δ_{n_h} = \displaystyle\sum_{j=1}^{n_h} l_r \sin⁡(\displaystyle\sum_{p=1}^{j} θ_p) \]
 <br>  
 </div>
   
