--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -58,7 +58,11 @@ spring as
   Assuming small angles and neglecting the effect of geometric foreshortening under large deflections, the effective linear tip 
 stiffness of the discretized structure is given by \(K_l\). This can be further equated to the linear tip stiffness of an equivalent 
 beam of length \(l_h\) and with the same cantilevered boundary conditions
-
+<br>  
+  \[ K_l = P \over {δ_{n_h}} = {3\bar{EI_e}} \over {{l_h}^3} = {6k_θ} \over {l_r[ 3l_h n_h (n_h + 1) - l_r (n_h - 1) n_h (n_h+1)]} \]
+<br>
+  Thus, the effective bending rigidity of the flexure segment, \(\bar{EI_e}\) can now be written as
+<br>
 <br>
 Note: Parts of this except is taken from the following publication:
 <a herf = "https://doi.org/10.1088/0964-1726/24/9/094007"> Punnag Chatterjee and Matthew Bryant 2015 Smart Mater. Struct. 24 094007 <\a>
