--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -64,6 +64,17 @@ beam of length \(l_h\) and with the same cantilevered boundary conditions
   Thus, the effective bending rigidity of the flexure segment, \(\bar{EI_e}\) can now be written as
 <br>
 <br>
+  
+  <br>
+  This equation is useful as it relates the geometric properties of the flexure hinge to that of the bending rigidity of this segment, 
+facilitating the tuning of the flexure segment to affect the desired natural frequencies of the entire structure.
+<br>
+  <figure>
+    <p style="text-align:center;"><img src="assets/images/Project1_image2.tif" alt="Image2" style="width:600px"><\p>
+    <figcaption>Figure 1. Comparison of the flexure model with the FE model simulated in ANSYS. Tip deflection of the cantilevered 
+      flexure section is plotted as a function of several rigid links.</figcaption>
+  </figure>
+<br>      
 Note: Parts of this except is taken from the following publication:
 <a herf = "https://doi.org/10.1088/0964-1726/24/9/094007"> Punnag Chatterjee and Matthew Bryant 2015 Smart Mater. Struct. 24 094007 <\a>
  
