--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -59,7 +59,8 @@ spring as
 stiffness of the discretized structure is given by \(K_l\). This can be further equated to the linear tip stiffness of an equivalent 
 beam of length \(l_h\) and with the same cantilevered boundary conditions
 <br>  
-  \[ K_l = {P \over {δ_{n_h}}} = {{3\overline {EI_e}} \over {{l_h}^3}} = {{6k_θ} \over {l_r[ 3 l_h n_h (n_h + 1) - l_r (n_h - 1) n_h (n_h+1)]}} \]
+<!---  \[ K_l = {P \over {δ_{n_h}}} = {{3\overline {EI_e}} \over {{l_h}^3}} = {{6k_θ} \over {l_r[ 3 l_h n_h (n_h + 1) - l_r (n_h - 1) n_h (n_h+1)]}} \]
+--->
 <br>
   Thus, the effective bending rigidity of the flexure segment, \(\overline {EI_e}\) can now be written as
 <br>
