--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -64,13 +64,13 @@ beam of length \(l_h\) and with the same cantilevered boundary conditions
 <br>
   Thus, the effective bending rigidity of the flexure segment, \(\overline {EI_e}\) can now be written as
 <br>
-  \[\overline {EI_e} = {{2k_θ {l_h}^3} \over {l_r n_h (n_h + 1)[3l_h - l_r (n_h - 1)]}} \] 
+ <!--- \[\overline {EI_e} = {{2k_θ {l_h}^3} \over {l_r n_h (n_h + 1)[3l_h - l_r (n_h - 1)]}} \] --->
 <br>
   This equation is useful as it relates the geometric properties of the flexure hinge to that of the bending rigidity of this segment, 
 facilitating the tuning of the flexure segment to affect the desired natural frequencies of the entire structure.
 <br>
   <figure>
-    <p style="text-align:center;"><img src="assets/images/Project1_image2.tif" alt="Image2" style="width:600px"><\p>
+    <p style="text-align:center;"><img src="assets/images/Image2.tif" alt="Image2" style="width:600px"><\p>
     <figcaption>Figure 1. Comparison of the flexure model with the FE model simulated in ANSYS. Tip deflection of the cantilevered 
       flexure section is plotted as a function of several rigid links.</figcaption>
   </figure>
