--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -70,7 +70,7 @@ beam of length \(l_h\) and with the same cantilevered boundary conditions
 facilitating the tuning of the flexure segment to affect the desired natural frequencies of the entire structure.
 <br>
   <figure>
-    <p style="text-align:center;"><img src="assets/images/Image2.tif" alt="Image2" style="width:600px"><\p>
+    <p style="text-align:center;"><img src="assets/images/Image2.jpg" alt="Image2" style="width:600px"><\p>
     <figcaption>Figure 1. Comparison of the flexure model with the FE model simulated in ANSYS. Tip deflection of the cantilevered 
       flexure section is plotted as a function of several rigid links.</figcaption>
   </figure>
