--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -68,7 +68,7 @@ beam of length \(l_h\) and with the same cantilevered boundary conditions
   This equation is useful as it relates the geometric properties of the flexure hinge to that of the bending rigidity of this segment, 
 facilitating the tuning of the flexure segment to affect the desired natural frequencies of the entire structure.
 <br>
-<img src="assets/images/Image2.jpg" alt="Image2" style="width:600px">
+<img src="assets/images/Image2.jpg" alt="Image2" style="width:400px;text-align:center;">
 <br>      
 Note: Parts of this except is taken from the following publication:
 <a herf = "https://doi.org/10.1088/0964-1726/24/9/094007"> Punnag Chatterjee and Matthew Bryant 2015 Smart Mater. Struct. 24 094007 <\a>
