--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -69,7 +69,7 @@ beam of length \(l_h\) and with the same cantilevered boundary conditions
 facilitating the tuning of the flexure segment to affect the desired natural frequencies of the entire structure.
 <br>
 <figure>
-  <img src="assets/images/Image2.jpg" alt="Image2" style="width:400px;text-align:center">
+  <p style="text-align:center;><img src="assets/images/Image2.jpg" alt="Image2" style="width:400px;"></p>
   <figcaption>Figure 1. Comparison of the flexure model with the FE model simulated in ANSYS. Tip deflection of the cantilevered 
       flexure section is plotted as a function of several rigid links.</figcaption>
 </figure
