--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -58,12 +58,14 @@ spring as
   Assuming small angles and neglecting the effect of geometric foreshortening under large deflections, the effective linear tip 
 stiffness of the discretized structure is given by \(K_l\). This can be further equated to the linear tip stiffness of an equivalent 
 beam of length \(l_h\) and with the same cantilevered boundary conditions
-<br>  
+<br>
+<!---
 \[ K_l = {P \over {δ_{n_h}}} = {{3\overline {EI_e}} \over {{l_h}^3}} = {{6k_θ} \over {l_r[ 3 l_h n_h (n_h + 1) - l_r (n_h - 1) n_h (n_h+1)]}} \]
+--->
 <br>
   Thus, the effective bending rigidity of the flexure segment, \(\overline {EI_e}\) can now be written as
 <br>
- \[\overline {EI_e} = {{2k_θ {l_h}^3} \over {l_r n_h (n_h + 1)[3l_h - l_r (n_h - 1)]}} \]
+ <!---\[\overline {EI_e} = {{2k_θ {l_h}^3} \over {l_r n_h (n_h + 1)[3l_h - l_r (n_h - 1)]}} \]--->
 <br>
   This equation is useful as it relates the geometric properties of the flexure hinge to that of the bending rigidity of this segment, 
 facilitating the tuning of the flexure segment to affect the desired natural frequencies of the entire structure.
