--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -74,7 +74,7 @@ facilitating the tuning of the flexure segment to affect the desired natural fre
   <img src="assets/images/Image2.jpg" alt="Image2" style="width:400px;">
   <figcaption>Figure 1. Comparison of the flexure model with the FE model simulated in ANSYS. Tip deflection of the cantilevered 
       flexure section is plotted as a function of several rigid links.</figcaption>
-</figure
+</figure>
 <br>      
 Note: Parts of this except is taken from the following publication:
 <a herf = "https://doi.org/10.1088/0964-1726/24/9/094007"> Punnag Chatterjee and Matthew Bryant 2015 Smart Mater. Struct. 24 094007 </a>
