--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -77,7 +77,7 @@ facilitating the tuning of the flexure segment to affect the desired natural fre
 </figure>
 <br>      
 Note: Parts of this except is taken from the following publication:
-<a herf = "https://doi.org/10.1088/0964-1726/24/9/094007"> Punnag Chatterjee and Matthew Bryant 2015 Smart Mater. Struct. 24 094007 </a>
+<a href = "https://doi.org/10.1088/0964-1726/24/9/094007"> Punnag Chatterjee and Matthew Bryant 2015 Smart Mater. Struct. 24 094007 </a>
  
 </div>
   
